--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -10,7 +10,7 @@ To and From, Button Generators, and Personalized Text Box
 	margin: 25px;
 }
 
-.actualCard {
+.niceBorder {
 	padding: 5px;
  	border: 1px dashed #464646;
 	box-shadow: 0 0 0 3px #fff, 0 0 0 5px #ddd, 0 0 0 10px #fff, 0 0 2px 10px #B7B5B5;
