final presentation for front end capstone

--- a/views/addCard.html
+++ b/views/addCard.html
@@ -93,7 +93,7 @@
 <!--          ng-click with a themes controller
          when you click on it it will run a function that will
          switch the css on it
- --><div class="col-md-2"> <!-- toggle theme buttonss  -->
+ --><div class="col-md-2"> <!-- toggle theme buttons  -->
          <hr>
          <h2 class="intro-text text-center">Toggle Themes Buttons</h2>
          <hr>
