--- a/views/authenticate.html
+++ b/views/authenticate.html
@@ -4,9 +4,9 @@
 
 <div> <!-- container -->
   <form>
-    <h3>Sign In or Sign Up!</h3>
+    <h3 class="loginText">Sign In or Sign Up!</h3>
     <div class="form-group">
-      <label for="email">Email:</label>
+      <label for="email" class="loginText">Email:</label>
       <input
         class="form-control"
         type="email"
@@ -15,7 +15,7 @@
         placeholder="email@email.com">
     </div> <!-- form-group -->
     <div class="form-group">
-      <label for="password">Password:</label>
+      <label for="password" class="loginText">Password:</label>
       <input
         class="form-control"
         type="password"
