--- a/views/landing.html
+++ b/views/landing.html
@@ -86,7 +86,7 @@ An exact replica but also functional version is located at
          <p id="from">From: {{ card.from }}</p>
          <p id="textAreaForCard">{{ card.personalizedTextBox }}</p>
          </div>
-          <button ng-click="card.saveCardToCollection()" type="submit" class="btn btn-secondary">Submit</button>
+          <button ng-click="card.saveCardToCollection()" type="submit" class="btn btn-secondary submitButton pull-right">Submit</button>
 
      </div><!--col-md-6-->
 
