--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -15,22 +15,31 @@ To and From, Button Generators, and Personalized Text Box
  	border: 1px dashed #464646;
 	box-shadow: 0 0 0 3px #fff, 0 0 0 5px #ddd, 0 0 0 10px #fff, 0 0 2px 10px #B7B5B5;
 }
+
+/********************************************************
+SUBMIT BUTTON
+*********************************************************/
+.submitButton {
+  margin: 20px;
 }
+
+/*
+login*/
+
+.loginText {
+  color: #fff;
+}
+
+
 
 /*********************************************************
 Theme Buttons
 **********************************************************/
 
 .theme-buttons {
-	width:200px;
-	height:75px;
-	border-radius:100px;
-	font-size:20px;
-	color:#fff;
-	line-height:100px;
+
 	text-align:center;
-	background:#000;
-	margin: 50px;
+	margin: 10px;
 }
 
 
